# STG-NF-REWORK

./: main.py  pyproject.toml
src/: config.py  cpu_profile.py  dataset.py  evaluate.py  export_onnx.py  inference.py  model.py  profiler.py  realtime_bench.py  train.py
