[project]
name = "stg-nf-rework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.3.5",
    "onnx>=1.20.1",
    "onnxruntime-gpu>=1.24.2",
    "onnxscript>=0.6.2",
    "psutil>=7.2.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "triton-windows>=3.6.0.post25",
]
